--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   font_awesome_flutter: 10.1.0
   google_fonts: 4.0.3
+  custom_navigation_bar: ^0.8.2
 
 dev_dependencies:
   flutter_test:
