--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   font_awesome_flutter: 10.1.0
   google_fonts: 4.0.3
   custom_navigation_bar: ^0.8.2
+  flutter_advanced_segment: ^3.0.2
+  animated_segmented_tab_control: ^1.0.1
 
 dev_dependencies:
   flutter_test:
