Login and signup Done, sign in with google remaining

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.expensetracker">
+    package="com.origo.expense.tracker">
    <application
         android:label="expensetracker"
         android:name="${applicationName}"
