--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,12 @@ dependencies:
   custom_navigation_bar: ^0.8.2
   flutter_advanced_segment: ^3.0.2
   animated_segmented_tab_control: ^1.0.1
+  change_app_package_name: ^1.1.0
+  firebase_core: ^2.10.0
+  firebase_auth: ^4.4.2
+  google_sign_in: ^6.1.0
+  provider: ^6.0.5
+  fluttertoast: ^8.2.1
 
 dev_dependencies:
   flutter_test:
