--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   google_sign_in: ^6.1.0
   provider: ^6.0.5
   fluttertoast: ^8.2.1
+  cloud_firestore: ^4.5.2
 
 dev_dependencies:
   flutter_test:
