--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   provider: ^6.0.5
   fluttertoast: ^8.2.1
   cloud_firestore: ^4.5.2
+  charts_flutter: ^0.12.0
+  pie_chart: ^5.3.2
 
 dev_dependencies:
   flutter_test:
