--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   cloud_firestore: ^4.5.2
   charts_flutter: ^0.12.0
   pie_chart: ^5.3.2
+  lottie: ^2.3.2
 
 dev_dependencies:
   flutter_test:
@@ -72,15 +73,16 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  # To add assests to your application, add an assests section, like this:
+  assets:
+   - assests/img/
+   - assests/lot/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
-  # For details regarding adding assets from package dependencies, see
+  # For details regarding adding assests from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
 
   # To add custom fonts to your application, add a fonts section here,
