--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -72,5 +72,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation platform('com.google.firebase:firebase-bom:30.1.0')
     implementation 'com.google.firebase:firebase-auth'
+     implementation 'com.google.android.gms:play-services-ads:21.5.0'
 }
 
